--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <a class="header-logo" href="https://webstudio.com ">web studio</a>
             <ul>
                 <li>
-                    <a class="header-link" href="https://web.com ">Студия</a>
+                    <a class="header-link" href="\index.html">Студия</a>
                 </li>
                 <li>
-                    <a class="header-link" href="https://webst.com ">Портфолио</a>
+                    <a class="header-link" href="\portfolio.html">Портфолио</a>
                 </li>
                 <li>
                     <a class="header-link" href="https://wio.com ">Контакты</a>
