--- a/portfolio.html
+++ b/portfolio.html
@@ -52,88 +52,88 @@
         <button class="button" type="button">Маркетинг</button>
 
     </section>
-    <section>
-        <ul>
-            <li>
-                <img src="\css\images\imga.jpg" alt="" width="370"/>
-                <h1 class="title">
+    <section class="image">
+        <ul class="image-list">
+            <li class="image-list-numb">
+                <img src="\images copy\imga.jpg" alt="" width="370"/>
+                <h1 class="image-list-numb-title">
                     Технокряк
                 </h1> 
                     
             
-                <p class="text">
+                <p class="image-list-numb-text">
                     Веб сайт
                 </p>
             </li>
             <li>
-                <img src="\css\images\imgb.jpg" alt="" width="370" />
-                <h1 class="title">
+                <img src="\images copy\imgb.jpg" alt="" width="370" />
+                <h1 class="image-list-numb-title">
                     Постер <span lang="en">orlean vs Golden Star</span> 
                 </h1>
-                <p class="text">
+                <p class="image-list-numb-text">
                     Дизайн
                 </p>
             </li>
             <li>
-                <img src="\css\images\imgc.jpg" alt="" width="370" />
-                <h1 class="title">
+                <img src="\images copy\imgc.jpg" alt="" width="370" />
+                <h1 class="image-list-numb-title">
                     Ресторан <span lang="en">Seafood</span>
                 </h1>
-                <p class="text">
+                <p class="image-list-numb-text">
                     Приложение
                 </p>
             </li>
             <li>
-                <img src="\css\images\imgd.jpg" alt="" width="370" />
-                <h1 class="title">
+                <img src="\images copy\imgd.jpg" alt="" width="370" />
+                <h1 class="image-list-numb-title">
                     Проект  <span lang="en">Prime</span>
                 </h1>
-                <p class="text">
+                <p class="image-list-numb-text">
                     Маркетинг
                 </p>
             </li>
             <li>
-                <img src="\css\images\imge.jpg" alt="" width="370" />
-                <h1 class="title">
+                <img src="\images copy\imge.jpg" alt="" width="370" />
+                <h1 class="image-list-numb-title">
                     Проект <span lang="en">Boxes</span>
                 </h1>
-                <p class="text">
+                <p class="timage-list-numb-text">
                     Приложение
                 </p>
             </li>
             <li>
-                <img src="\css\images\imgf.jpg" alt="" width="370" />
-                <h1 class="title" lang="en">
+                <img src="\images copy\imgf.jpg" alt="" width="370" />
+                <h1 class="image-list-numb-title" lang="en">
                     Inspiration has no borders
                 </h1>
-                <p class="text">
+                <p class="image-list-numb-text">
                     Веб-сайт
                 </p>
             </li>
             <li>
-                <img src="\css\images\imgg.jpg" alt="" width="370" />
-                <h1 class="title">
+                <img src="\images copy\imgg.jpg" alt="" width="370" />
+                <h1 class="image-list-numb-title">
                     Издание <span lang="en">Limited Edition</span>
                 </h1>
-                <p class="text">
+                <p class="image-list-numb-text">
                     Дизайн
                 </p>
             </li>
             <li>
-                <img src="\css\images\imgh.jpg" alt="" width="370" />
-                <h1 class="title">
+                <img src="\images copy\imgh.jpg" alt="" width="370" />
+                <h1 class="image-list-numb-title">
                     Проект <span lang="en">Lab</span>
                 </h1 class=>
-                <p class="text">
+                <p class="image-list-numb-text">
                     Маркетинг
                 </p>
             </li>
             <li>
-                <img src="\css\images\imgo.jpg" alt="" width="370" />
-                <h1 class="title" lang="en">
+                <img src="\images copy\imgo.jpg" alt="" width="370" />
+                <h1 class="image-list-numb-title" lang="en">
                     Growing Business
                 </h1>
-                <p class="text">
+                <p class="image-list-numb-text">
                     Приложение
                 </p>
             </li>
