--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
         </section>
     </main>
     <footer>
-        <h4>
 
-        <a class="header-logo" href="https://webstudio.com ">web studio</a
 
-        </h4>
+        <a class="header-logo" href="https://webstudio.com ">web studio</a>
+
+         
 
         <address class="address-page">
             <ul class="address-page-list">
