--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header page">
         <nav>
-            <a class="header-logo" href="https://webstudio.com ">web studio</a>
+            <a class="header-logo" href="https://webstudio.com "><spanc class="logotype">Web</spanc>Studio</a>
             <ul>
                 <li>
                     <a class="header-link" href="\index.html">Студия</a>
