--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="\styles.css">
 </head>
 <body>
     <header class="header page">
         <nav>
-            <a class="header-logo" href="https://webstudio.com "><spanc class="logotype">Web</spanc>Studio</a>
+            <a class="header-logo-page" href="https://webstudio.com "><spanc class="logotype">Web</spanc>Studio</a>
             <ul>
                 <li>
                     <a class="header-link" href="\index.html">Студия</a>
@@ -98,7 +98,7 @@
                     <h3 class="ourteam-title-name">Николай Тарасов</h3>
                     <p class="ourteam-text">Marketing</p>
                 </li>
-                <li><img src="./images/imge.jpg" alt=" Михаил Ермаков" width="270" />
+                <li><img src="\images\imgf.jpg" alt=" Михаил Ермаков" width="270" />
                     <h3 class="ourteam-title-name">Михаил Ермаков</h3>
                     <p class="ourteam-text">Ul Designer</p>
                 </li>
@@ -109,7 +109,7 @@
     <footer>
 
 
-        <a class="header-logo" href="https://webstudio.com ">web studio</a>
+        <a class="header-logo-page" href="https://webstudio.com "><spanc class="logotype">Web</spanc>Studio</a>
 
          
 
